updated blog post

--- a/student.ipynb
+++ b/student.ipynb
@@ -11,7 +11,7 @@
     "* Student pace:  part time\n",
     "* Scheduled project review date/time: June 17th, 2019\n",
     "* Instructor name: Victor Geislinger\n",
-    "* Blog post URL:\n"
+    "* Blog post URL: https://callroko.github.io/module_01_project_data_cleaning\n"
    ]
   },
   {
@@ -2764,6 +2764,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### What features are most highly correlated with price?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Remembering that the target variable is price, the variables most highly correlated to the price are: sqft_living grade, sqft_above. The variables least correlated with price is: sqft_lot15, yr_built, condition. Sqft_living and sqft_above are highly correlated with each other and because sqft_living is more correlated with the price, sqft_above will be dropped."
    ]
   },
@@ -2773,7 +2780,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing_pred['waterfront'] = housing_pred['waterfront'].astype('category')"
+    "housing_pred['waterfront'] = housing_pred['waterfront'].astype('category') #changing the waterfront to categorical"
    ]
   },
   {
@@ -3448,7 +3455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Does location matter to price?"
+    "### Does location affect price?"
    ]
   },
   {
@@ -3541,14 +3548,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# looks like the most expensive zipcodes are: 98004, 98039, 98040, 98112, and 98199. These counties are Medina, Bellevue, \n",
-    "# Mercer Island, and Seattle\n",
-    "# Also looking at the longtitude/latitude graph above shows that you should buy homes in the northwestern part of the county."
+    "It looks like the most expensive zipcodes are: 98004, 98039, 98040, 98112, and 98199. These counties are Medina, Bellevue, \n",
+    " Mercer Island, and Seattle\n",
+    " Also looking at the longtitude/latitude graph above shows that you should buy homes in the northwestern part of the county."
    ]
   },
   {
