--- a/student.ipynb
+++ b/student.ipynb
@@ -4463,25 +4463,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "plt.savefig('model3.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
@@ -5154,7 +5135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When I have time to reexamine this project, I think I would like to check to see if any columns I removed would improve or hurt the model. Also I would like to see why the bedrooms coeffcient was negative and what could be causing that."
+    "When I have time to reexamine this project, I think I would like to check if removing the date of sale from the final model harmed or improved it. If the yr_renovated affected the price. And to figure why the number of bedrooms did not have a positive impact on the price. It's coeffcient was negative and its possible it needed to scaled or transformed in some kind of way."
    ]
   },
   {
